Styles: add notice to _z-index.scss, fix mixin fixed-fullscreen code

--- a/src/scss/utilities/_z-index.scss
+++ b/src/scss/utilities/_z-index.scss
@@ -1,6 +1,18 @@
+//? 引入方式：
+//* .a {
+//*   z-index: getZIndex(a);// z-index: 1;
+//* }
+
 //? 設定z-index堆疊，愈下zindex層級愈高
+//? 設定方式：
+//* $globalZIndexes: (
+//*   'lv1':null,
+//*   'lv2':null,
+//* );
 $globalZIndexes: (
-)        ;
+  'zindexStart':500, //設定起始值，避免其元件蓋過去設定
+  'lv1': null,
+);
 
 @function getZIndex($listKey) {
   @if map-has-key($globalZIndexes, $key: $listKey) {
@@ -14,7 +26,7 @@ $globalZIndexes: (
         @if $val <= $zAccumulator {
           //* If the z-index is not greater than the elements preceding it,
           //* the whole element-order paradigm is invalidated
-          @error "z-index for #{$key} must be greater than the preceding value!";
+          @error 'z-index for #{$key} must be greater than the preceding value!';
         }
 
         $zAccumulator: $val;
@@ -28,8 +40,3 @@ $globalZIndexes: (
     @error "#{$listKey} doesn't exist in the $globalZIndexes map";
   }
 }
-
-//? 引入方式
-//* .a {
-//*   z-index: getZIndex(a);// z-index: 1;
-//* }
